sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:8: error: Double.type does not take parameters
			ecart=ecart/Double(1.3);
                                          ^AlgCombSort:10: error: not found: value i
		i=0;
                ^AlgCombSort:11: error: not found: value i
		while (plusPetit(ecart+i,getNombreValeurs())) {
                                       ^AlgCombSort:12: error: not found: value i
			if (plusPetit(i+ecart,i)){
                                      ^AlgCombSort:13: error: not found: value i
				echange(i,i+ecart);
                                        ^AlgCombSort:16: error: not found: value i
			i=i+1;
                        ^