sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.code
def combSort() {
	var ecart=getNombreValeurs();
	var verif=false;
	do{
		verif=false;
		if (ecart>1) {
			ecart=ecart/Double(1.3);
		}
		i=0;
		while (plusPetit(ecart+i,getNombreValeurs())) {
			if (plusPetit(i+ecart,i)){
				echange(i,i+ecart);
				verif=true;
			}
			i=i+1;
		}
	} while (ecart>1 | verif)
}
